added addValue and addUniqueMaterial handlers fixed add requests to DB fixed migrations BEFORE CHANGING

--- a/deploy/Dockerfile
+++ b/deploy/Dockerfile
@@ -26,5 +26,6 @@ USER metallplace
 
 COPY --chown=metallplace --from=builder /app/bin/metallplace /app
 COPY --chown=metallplace --from=builder /app/internal/migrations /app/internal/migrations
+COPY --chown=metallplace --from=builder /app/var /app/var
 
 CMD ["/app/metallplace"]
