--- a/chart_service/package.json
+++ b/chart_service/package.json
@@ -5,16 +5,21 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "run": "node app.js",
+    "build": "tsc --build",
+    "clean": "tsc --build --clean",
     "start:dev": "nodemon"
   },
-  "author": "",
+  "author": "Ivan Demchuk Sergeecich",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.0",
     "chart.js": "^3.9.1",
     "chartjs-node-canvas": "^4.1.6",
     "chartjs-plugin-datalabels": "^2.1.0",
-    "express": "^4.18.1"
+    "connect": "^3.7.0",
+    "express": "^4.18.1",
+    "serve-static": "^1.15.0",
+    "tsc-node": "^0.0.3"
   },
   "devDependencies": {
     "@types/chart.js": "^2.9.37",
