--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -36,6 +36,27 @@ services:
     networks:
       - default
 
+  pdf:
+    image: arachnysdocker/athenapdf-service
+    container_name: metallplace-pdf
+    ports:
+      - 8081:8080
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
+    environment:
+      WEAVER_AUTH_KEY: key
+
+  chart:
+    image: metallplace-chart:latest
+    build:
+      context: ./chart_service
+      dockerfile: ./deploy/Dockerfile
+    container_name: metallplace-chart
+    ports:
+      - 3000:3000
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
+
 volumes:
   dbdata:
 
