--- a/docx-gen/package.json
+++ b/docx-gen/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.27.2",
     "date-fns": "^2.29.3",
     "docx": "^7.4.1",
+    "express": "^4.18.1",
     "image-size": "^1.0.2",
     "moment": "^2.29.4",
     "node-fetch": "^2.6.7",
